added madlib portion of the game

--- a/templates/game.html
+++ b/templates/game.html
@@ -5,10 +5,11 @@
 </head>
 <body>
     <h1>Madlibs</h1>
-    <form>
+    <form action="/madlib">
         <label>Noun</label> <input type="text" name="noun"><br>
         <label>Verb</label> <input type="text" name="verb"><br>
-        <label>Adjective</label><input type="text" name="adjective">
+        <label>Adjective</label><input type="text" name="adjective"><br>
+        <input type="submit">
     </form>
 </body>
 </html>
