modified gameplay to make a longer madlib

--- a/templates/game.html
+++ b/templates/game.html
@@ -6,9 +6,21 @@
 <body>
     <h1>Madlibs</h1>
     <form action="/madlib">
+        <label>Adjective</label> <input type="text" name="adjective"><br>
+        <label>Verb ending in 'ed'</label> <input type="text" name="verbed"><br>
+        <label>Noun (Plural)</label><input type="text" name="nounp"><br>
+        <label>Famous Person</label> <input type="text" name="famousperson"><br>
+        <label>Place</label> <input type="text" name="place"><br>
+        <label>Occupationn</label> <input type="text" name="occupation"><br>
         <label>Noun</label> <input type="text" name="noun"><br>
-        <label>Verb</label> <input type="text" name="verb"><br>
-        <label>Adjective</label><input type="text" name="adjective"><br>
+        <label>Nationality</label> <input type="text" name="nationality"><br>
+        <label>Female Celebrity</label> <input type="text" name="femalecelebrity"><br>
+        <label>Noun</label> <input type="text" name="noun1"><br>
+        <label>Female Friend</label> <input type="text" name="femalefriend"><br>
+        <label>Noun (Plural)</label> <input type="text" name="nounp1"><br>
+        <label>Number</label> <input type="text" name="number"><br>
+        <label>Adjective</label> <input type="text" name="adjective1"><br>
+
         <input type="submit">
     </form>
 </body>
