--- a/templates/gameplay.html
+++ b/templates/gameplay.html
@@ -4,8 +4,9 @@
             <title>Get Results</title>
         </head>
         <body>
-            <p>There once was a {{ adjective }} {{noun}} sitting in the Hackbright Lab. When
-            {{noun}} went to pick it up, it burst into flames in a totally {{adjective}} way
+            <p>
+                I enjoy long, {{ adjective }} walks on the beach, getting {{ verbed }} in the rain and serendipitous encounters with {{ nounp }}. I really like {{ famousperson }} mixed with {{noun}}, and romantic, candle-lit {{noun}}. I am well-read from {{noun}} to {{noun}}. I travel frequently, especially to {{ place }}, when I am not busy with work. (I am a {{ occupation }}.) I am looking for {{ noun }} and beauty in the form of a {{ nationality }} goddess. She should have the physique of {{ femalecelebrity }} and the {{ noun1 }} of {{ femalefriend }}. I would prefer if she knew how to cook, clean, and {{ nounp1 }} my {{noun}}. I know I’m not very attractive in my picture, but it was taken {{number}} days ago, and I have since become more {{adjective1}}.       
+                
         </p>
         </body>
     </html>
