--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -4,6 +4,7 @@
   <title>Madlibs</title>
 </head>
 <body>
+    <h1> Hello {{ person }} </h1>
     <form action="/game">
         <label>Do you want to play a game?</label> <br>
         <input  type="radio" name="yesno" value="yes">Yes <br>
