--- a/templates/game.html
+++ b/templates/game.html
@@ -11,7 +11,7 @@
         <label>Noun (Plural)</label><input type="text" name="nounp"><br>
         <label>Famous Person</label> <input type="text" name="famousperson"><br>
         <label>Place</label> <input type="text" name="place"><br>
-        <label>Occupationn</label> <input type="text" name="occupation"><br>
+        <label>Occupation</label> <input type="text" name="occupation"><br>
         <label>Noun</label> <input type="text" name="noun"><br>
         <label>Nationality</label> <input type="text" name="nationality"><br>
         <label>Female Celebrity</label> <input type="text" name="femalecelebrity"><br>
